# gui

./: .gitignore  .taurignore  Cargo.toml  Makefile  index.html  package-lock.json  package.json  pubspec.yaml  tailwind.config.cjs
assets/css/: app.scss
ios/Runner/: bridge_generated.h
lib/: bridge_generated.dart  main.dart
lib/models/: identity.dart  stamp.dart
native/: Cargo.toml
native/src/: api.rs  bridge_generated.rs
src/: error.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: app.rs  header.rs  mod.rs
src/components/form/: button.rs
src/components/pages/: error.rs  main.rs  mod.rs
src/components/util/: icon.rs  mod.rs  page.rs
src/models/: core.rs  darkmode.rs  localstorage.rs  mod.rs
