[package]
name = "stamp-gui-ui"
version = "0.0.1"
edition = "2021"

[dependencies]
js-sys = "0.3"
leptos = { version = "0.5.0-beta", features = ["csr"] }
leptos_meta = { version = "0.5.0-beta", features = ["csr"] }
leptos_router = { version = "0.5.0-beta", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"
thiserror = "1.0"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Storage", "Window"] }

[workspace]
members = ["src-tauri"]
